GL/src/test/deca/syntax/valid/deca_sans_objet/keyword_if.deca
// Description :
// test du mot-cle if
//
// Resultat :
// ok

{
if (true) {
    println("test du mot-cle if");

}
}