GL/src/test/deca/syntax/invalid/deca_sans_objet/keyword_if_typo.deca
// Description :
// test d’un mot-cle invalide (iff)
//
// Resultat :
// Erreur syntaxique
// Ligne 9 : mot-cle attendu

{
iff (true) {
}
}